tests/pairs/ill-typed/bad-pairs-13.stella
language core;

extend with #pairs;

fn main(x : Nat) -> Nat {
  return succ({0,0})
}
